# ICM-20948-RP2040

./: CMakeLists.txt  README.md  back.txt  icm-reg.h  icm-spi.c  icm_read.cpp
src/: icm20948.cpp  icm20948.h
